--- a/Sample-WPF/packages.config
+++ b/Sample-WPF/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.4.4" targetFramework="net46" />
   <package id="Microsoft.Azure.CognitiveServices.Vision.ComputerVision" version="4.0.0" targetFramework="net46" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net46" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net46" />
@@ -11,10 +12,15 @@
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net46" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net46" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.114.0" targetFramework="net46" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net46" />
   <package id="System.Collections" version="4.3.0" targetFramework="net46" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net46" />
   <package id="System.Console" version="4.3.0" targetFramework="net46" />
+  <package id="System.Data.SQLite" version="1.0.114.4" targetFramework="net46" />
+  <package id="System.Data.SQLite.Core" version="1.0.114.3" targetFramework="net46" />
+  <package id="System.Data.SQLite.EF6" version="1.0.114.0" targetFramework="net46" />
+  <package id="System.Data.SQLite.Linq" version="1.0.114.0" targetFramework="net46" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net46" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net46" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net46" />
