--- a/Sample-WPF/VisionAPI-WPF-Samples.csproj
+++ b/Sample-WPF/VisionAPI-WPF-Samples.csproj
@@ -158,6 +158,7 @@
       <DependentUpon>AreaOfInterestPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="BoundingRectExtension.cs" />
+    <Compile Include="Image.cs" />
     <Compile Include="SqlHelper.cs" />
     <Compile Include="Tag.cs" />
     <Compile Include="TextRecognitionPage.xaml.cs">
